...
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import pt.isel.pdm.ui.clickable.ClickableIcon

const val BACK_BUTTON_TAG = "Back"
const val NEXT_BUTTON_TAG = "Next"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun TopBar(config: TopBarConfig) {
    TopAppBar(
...
